--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -44,3 +44,7 @@ exclude: [".jekyll-cache", ".idea", "vendor/*", "assets/node_modules"]
 
 # theme: type-on-strap                                  # if using the theme as a jekyll theme gem
 remote_theme: sylhare/Type-on-Strap                     # If using as a remote_theme in github
+
+
+
+relative_permalinks: false
